<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="640dp"
    tools:context=".OrderPage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="203dp"
        android:layout_height="37dp"
        android:autoSizeTextType="uniform"
        android:text="@string/pengisian_data"
        android:textColor="#FF0006"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="119dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:autoSizeTextType="uniform"
        android:text="@string/nama_wna"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="280dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:text="@string/perusahaan_wna_akan_bekerja"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText9"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="135dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:text="@string/penangung_jawab"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:text="@string/nomor_telepon"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="55dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:text="@string/email"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText3"
        tools:targetApi="o" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText9"
        android:layout_width="323dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:hint="@string/isi_nama_wna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="323dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:hint="@string/isi_nama_perusahaan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="323dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:hint="@string/isi_nama_penangung_jawab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText3"
        android:layout_width="323dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:hint="@string/isi_nomor_telepon_wna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText4"
        android:layout_width="323dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:hint="@string/isi_email_wna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/con"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#FF0000"
        android:text="@string/berikutnya"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText4"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/halaman1"
        android:layout_width="132dp"
        android:layout_height="15dp"
        android:text="@string/halaman1"
        android:textColor="#FF0000"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>