<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="360dp"
    android:layout_height="640dp">

    <TextView
        android:id="@+id/halaman"
        android:layout_width="132dp"
        android:layout_height="15dp"
        android:text="@string/halaman2"
        android:textColor="#FF0000"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="203dp"
        android:layout_height="37dp"
        android:autoSizeTextType="uniform"
        android:text="@string/verifikasi_dokumen"
        android:textColor="#FF0008"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="119dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:autoSizeTextType="uniform"
        android:text="@string/pasport"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="119dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:text="@string/visa"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText6"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="119dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:text="@string/kitas"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText7"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="119dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:text="@string/ijazah"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText5"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="119dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:text="@string/jenis_dokumen"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:autoSizeTextType="uniform"
        android:text="@string/unggah_berkas_yang_dibutuhkan_untuk_proses_pembuatan_dokumen"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        tools:targetApi="o" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="323dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:hint="@string/rptka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText5"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/upload_pasport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText6"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:hint="@string/upload_ijazah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText7"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:hint="@string/upload_visa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText8"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:hint="@string/upload_kitas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/todo"
        android:tint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText2"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/todo"
        android:tint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText7"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/todo"
        android:tint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText8"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/todo"
        android:tint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText6"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/todo"
        android:tint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText5"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <Button
        android:id="@+id/berikut"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#FF0000"
        android:text="@string/berikutnya"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/line" />




</androidx.constraintlayout.widget.ConstraintLayout>