<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Article1">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="378dp"
        android:layout_height="277dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="272dp"
        android:autoSizeTextType="uniform"
        android:text="@string/isianartikel1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="203dp"
        android:layout_height="37dp"
        android:autoSizeTextType="uniform"
        android:text="@string/Artikel1"
        android:textColor="#FF0008"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="373dp"
        android:layout_height="116dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/artikel1" />
</androidx.constraintlayout.widget.ConstraintLayout>