<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="800dp"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="414dp"
                android:layout_height="171dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/vector1" />

            <ImageButton
                android:id="@+id/order"
                android:layout_width="match_parent"
                android:layout_height="277dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/order1" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:autoSizeTextType="uniform"
                android:text="@string/Artikel"
                android:textColor="#FF0006"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.026"
                tools:targetApi="o" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/line" />

            <Button
                android:id="@+id/article1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:autoSizeTextType="uniform"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/Artikel1"
                android:textAllCaps="false"
                android:textColor="#FF0008"
                android:textSize="14sp"
                tools:targetApi="o" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/artikel1s" />

            <TextView
                android:id="@+id/isiartikel1"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/isiartikel1" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="385dp"
        android:layout_height="69dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:srcCompat="@drawable/redline" />

</androidx.constraintlayout.widget.ConstraintLayout>